--- a/package.json
+++ b/package.json
@@ -2,10 +2,24 @@
   "name": "namaste-react",
   "version": "1.0.0",
   "description": "This is from lecture 2",
-  "main": "index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jgarude/Namaste_React.git"
+  },
   "author": "Jitesh",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "parcel": "^2.8.2",
+    "process": "^0.11.10"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "browserslist": [
+    "last 2 versions"
+  ]
 }
