--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "devDependencies": {
     "@parcel/transformer-sass": "^2.8.2",
     "parcel": "^2.8.2",
-    "process": "^0.11.10"
+    "process": "^0.11.10",
+    "react-router-dom": "^6.7.0"
   },
   "dependencies": {
     "node-sass": "^8.0.0",
